--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -20,7 +20,7 @@ jobs:
               uses: google-github-actions/setup-gcloud@master
               with:
                   service_account_email: ${{ secrets.GCP_EMAIL }}
-                  service_account_key: ${{ secrets.GCP_SA_KEY }}
+                  service_account_key: ${{secrets.GOOGLE_APPLICATION_CREDENTIALS}}
                   export_default_credentials: true
 
             - name: Use gcloud CLI
