--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -30,11 +30,17 @@ jobs:
               run: |
                   pip3 install -r requirements.txt
                   dvc pull
-                  python dataset_describer.py
+                  python dataset_describer.py output_current.json
+
+            - name: Checkout previous commit
+              run: |
+                  git checkout $(git log --branches -1 --pretty=format:'%D' | sed 's/.*, //g')
+                  dvc pull
+                  python dataset_describer.py output_previous.json
 
             - name: Write CML report
               env:
                   REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
               run: |
-                  cat dataset_describe.json >> report.md
+                  cat output_previous.json >> report.md
                   cml-send-comment report.md
