--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -34,7 +34,7 @@ jobs:
 
             - name: Checkout previous commit
               run: |
-                  git fetch
+                  git log --branches -1 --pretty=format:'%D'
                   git checkout HEAD~1
                   dvc pull
                   python dataset_describer.py output_previous.json
