--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -34,7 +34,7 @@ jobs:
 
             - name: Checkout previous commit
               run: |
-                  git checkout new_experiment~1
+                  git checkout origin/new_experiment~1
                   dvc pull
                   python dataset_describer.py output_previous.json
 
